# PBRegisterActivity

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODING.md  Makefile  README.md  environment.yml  pbregisteractivity.spec  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py
src/pbregisteractivity/: __main__.py  about.py  activity.py  custom_widgets.py  mainwindow.py  parameters.py  prefs.py  specifyrange.py  timeplots.py  ui_about.py  ui_mainwindow.py  ui_prefs.py  ui_specifyrange.py  ui_timeplots.py  utils.py  version.py
src/pbregisteractivity/platform/: __init__.py  _linux.py  _macos.py  _windows.py  dirs.py  lock.py
src/pbregisteractivity/resources/: LICENSE  __init__.py
src/pbregisteractivity/ui/: Makefile  __init__.py  get_icons  resources.qrc  resources_rc.py  ui_about.py  ui_about.ui  ui_mainwindow.py  ui_mainwindow.ui  ui_prefs.py  ui_prefs.ui  ui_specifyrange.py  ui_specifyrange.ui  ui_timeplots.py  ui_timeplots.ui
tools/: bump_version.py
