[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbregisteractivity"
version = "1.1.1"
description = "Enregistrement d'activités pour remplissage de CRA"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philippe Poilbarbe", email = "philippe@cardolan.net" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "matplotlib>=3.8",
]

[project.scripts]
pbregisteractivity = "pbregisteractivity.__main__:main"

[project.urls]
Repository = "https://github.com/ppoilbarbe/PBRegisterActivity"

[tool.hatch.build.targets.wheel]
packages = ["src/pbregisteractivity"]

[tool.ruff]
line-length    = 88
target-version = "py312"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle  — style errors
    "F",   # pyflakes     — undefined names, unused imports
    "W",   # pycodestyle  — style warnings
    "I",   # isort        — import ordering
    "N",   # pep8-naming  — naming conventions
    "UP",  # pyupgrade    — modernise syntax
]
extend-select = [
    "PGH", # pygrep-hooks     — no bare `type: ignore`, deprecated calls
    "BLE", # flake8-blind-except — forbid bare `except Exception`
]

[tool.ruff.lint.per-file-ignores]
# Qt widget classes: setupUi/retranslateUi and the widget argument names
# (MainWindow, TimePlots, ...) follow the Qt API, not PEP 8 naming; long
# translatable strings shouldn't be wrapped either.
"src/pbregisteractivity/ui_*.py" = ["N801", "N802", "N803", "N806", "E501"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "lf"
